sample/error/e02603.asn
E02603 DEFINITIONS ::=
BEGIN
    Set ::= SET {
        item1   INTEGER,
        item2   INTEGER     -- E02603
    }
END
